// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`code: html format 1`] = `
====================================options=====================================
parsers: []
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<foo>
                <bar/>
</foo>
=====================================output=====================================
<foo>
  <bar />
</foo>

================================================================================
`;

exports[`code: js format 1`] = `
====================================options=====================================
parsers: []
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo(
                'bar')
=====================================output=====================================
foo("bar");

================================================================================
`;

exports[`code: json format 1`] = `
====================================options=====================================
parsers: []
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{foo:
                'bar'}
=====================================output=====================================
{ "foo": "bar" }

================================================================================
`;

exports[`code: typescript format 1`] = `
====================================options=====================================
parsers: []
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type foo =
                'bar'
=====================================output=====================================
type foo = "bar";

================================================================================
`;

exports[`code: yaml format 1`] = `
====================================options=====================================
parsers: []
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo:
         - 'bar'
=====================================output=====================================
foo:
  - "bar"

================================================================================
`;
